--- a/about-company.html
+++ b/about-company.html
@@ -14,7 +14,7 @@
         <!--Хэдер-->
         <div class="header">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-sm-6 offset-sm-3">
                     <div class="news">
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
@@ -23,11 +23,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-9 menu-left">
+                <div class="col-sm-9 menu-left">
                     <h1 class="company-name">"Центрэнгерго"</h1>
                     <p class="company-description">ООО Научно-исследовательский центр энерготехнологий</p>
                 </div>
-                <div class="col-md-3 menu-right">
+                <div class="col-sm-3 menu-right">
                     <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
                     <div class="contacts">
                         <p class="website">www.ce91.ru</p>
@@ -59,12 +59,12 @@
         <!--Основной контент страницы-->
             <div class="content mt-5">
                 <div class="about-company">
-                    <div class="col-md-8 offset-md-2">
+                    <div class="col-sm-8 offset-sm-2">
                         <p class="info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo odio hic dolorem. Alias molestiae placeat provident dolore dolor voluptatibus consequuntur, sapiente possimus pariatur accusantium nostrum, eius nisi dolores aliquam quod sunt vero, minima animi. Debitis laborum unde dolorum, sed optio ipsum aliquam odit harum, veniam animi porro aspernatur incidunt fugit perferendis nisi rem ratione pariatur quidem libero. Delectus iusto, a, praesentium odit quos inventore hic iste laborum tempore itaque libero error quia quam minima blanditiis, deserunt labore exercitationem. Porro, repellat inventore numquam error ad perferendis, ratione eligendi sequi quia harum aspernatur facere cum architecto vero incidunt doloribus mollitia expedita quibusdam!</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="info-table-div col-md-6 offset-md-3">
+                    <div class="info-table-div col-sm-6 offset-sm-3">
                         <table class="info-table table table-striped">
                             <tr>
                                 <td>Дата основания</td>
@@ -86,26 +86,26 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 offset-md-3">
+                    <div class="col-sm-6 offset-sm-3">
                         <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 text-div">
+                    <div class="col-sm-6 text-div">
                         <p class="text-col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quidem vero harum doloremque animi quo aspernatur expedita natus nesciunt, explicabo quibusdam esse et at ad sed. Dolor eveniet nesciunt magni. Repudiandae voluptatum dolorum voluptatem, maxime a quia sunt officiis nesciunt tempore nobis laboriosam dolorem fugiat fugit! Vero quasi asperiores hic nihil consequuntur aliquam sunt qui itaque laudantium doloremque enim mollitia quaerat, similique accusantium voluptatibus deserunt, iste, magni officiis dolores reiciendis ducimus ratione harum. Dicta assumenda velit debitis repellendus neque suscipit consequuntur harum accusantium necessitatibus nam adipisci enim esse corporis doloribus expedita, a reiciendis fugit dolorum provident. Illum, aliquam ipsum? Provident?</p>
                         <img src="img/about-company/engineers1.jpg" alt="" class="text-img">
                     </div>
-                    <div class="col-md-6 text-div">
+                    <div class="col-sm-6 text-div">
                         <img src="img/about-company/engineers2.jpg" alt="" class="text-img">
                         <p class="text-col">Atque unde eum in! Optio, nisi neque reprehenderit, id facere voluptatem blanditiis dicta excepturi quod ipsa totam itaque. Temporibus hic sequi illo, reprehenderit optio atque ducimus nesciunt pariatur, architecto minima et veniam sed. Reiciendis placeat est quia nulla dolorum velit, fugit eligendi minus, facilis ipsam omnis aspernatur vitae inventore ipsum nostrum odio ea pariatur id laudantium aperiam amet voluptatibus facere. Laborum exercitationem, quas enim illum quod numquam dolore veritatis excepturi in facere! Dolores optio dicta necessitatibus similique, reprehenderit fuga in excepturi, magnam iure facilis reiciendis nobis nemo. Incidunt rerum quam vitae quibusdam quod numquam, eveniet reiciendis adipisci alias, dolores vel!</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 text-div">
+                    <div class="col-sm-6 text-div">
                         <p class="text-col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quidem vero harum doloremque animi quo aspernatur expedita natus nesciunt, explicabo quibusdam esse et at ad sed. Dolor eveniet nesciunt magni. Repudiandae voluptatum dolorum voluptatem, maxime a quia sunt officiis nesciunt tempore nobis laboriosam dolorem fugiat fugit! Vero quasi asperiores hic nihil consequuntur aliquam sunt qui itaque laudantium doloremque enim mollitia quaerat, similique accusantium voluptatibus deserunt, iste, magni officiis dolores reiciendis ducimus ratione harum. Dicta assumenda velit debitis repellendus neque suscipit consequuntur harum accusantium necessitatibus nam adipisci enim esse corporis doloribus expedita, a reiciendis fugit dolorum provident. Illum, aliquam ipsum? Provident?</p>
                         <img src="img/about-company/engineers3.jpg" alt="" class="text-img">
                     </div>
-                    <div class="col-md-6 text-div">
+                    <div class="col-sm-6 text-div">
                         <img src="img/about-company/engineers4.jpg" alt="" class="text-img">
                         <p class="text-col">Atque unde eum in! Optio, nisi neque reprehenderit, id facere voluptatem blanditiis dicta excepturi quod ipsa totam itaque. Temporibus hic sequi illo, reprehenderit optio atque ducimus nesciunt pariatur, architecto minima et veniam sed. Reiciendis placeat est quia nulla dolorum velit, fugit eligendi minus, facilis ipsam omnis aspernatur vitae inventore ipsum nostrum odio ea pariatur id laudantium aperiam amet voluptatibus facere. Laborum exercitationem, quas enim illum quod numquam dolore veritatis excepturi in facere! Dolores optio dicta necessitatibus similique, reprehenderit fuga in excepturi, magnam iure facilis reiciendis nobis nemo. Incidunt rerum quam vitae quibusdam quod numquam, eveniet reiciendis adipisci alias, dolores vel!</p>
                     </div>
@@ -114,7 +114,7 @@
             <!--Футер-->
             <div class="footer">
                 <div class="row p-5">
-                    <div class="col-md-4 offset-md-2">
+                    <div class="col-sm-4 offset-sm-2">
                         <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
                             <li class="footer-contacts-li">109507, г. Москва,
@@ -123,7 +123,7 @@
                             <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
                             <li class="footer-menu-li"><a href="index.html">Главная</a></li>
