--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!--Хэдер-->
         <div class="header">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-sm-6 offset-sm-3">
                     <div class="news">
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
@@ -23,11 +23,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-9 menu-left">
+                <div class="col-sm-9 menu-left">
                     <h1 class="company-name">"Центрэнгерго"</h1>
                     <p class="company-description">ООО Научно-исследовательский центр энерготехнологий</p>
                 </div>
-                <div class="col-md-3 menu-right">
+                <div class="col-sm-3 menu-right">
                     <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
                     <div class="contacts">
                         <p class="website">www.ce91.ru</p>
@@ -59,12 +59,12 @@
         <!--Основной контент страницы-->
             <div class="content">
                 <div class="row mt-3 mb-3">
-                    <div class="col-md-6 left-content-block">
+                    <div class="col-sm-6 left-content-block">
                         <div class="employee-img-container">
                             <img src="img/main-page/employees.jpg" alt="" class="employee-img">
                         </div>
                     </div>
-                    <div class="col-md-6 right-content-block">
+                    <div class="col-sm-6 right-content-block">
                         <h1>Почему мы?</h1>
                         <p class="main-text">Мы команда профессионалов, ценящих Ваше время и готовых вывести Ваш бизнес 
                             на новые вершины. Лишь выбрав нас Вы получите проверенное не одним клиентом 
@@ -73,38 +73,38 @@
                     <hr class="divider">
                 </div>
                 <div class="row mt-3 mb-5">
-                    <div class="col-md-6 left-content-block">
+                    <div class="col-sm-6 left-content-block">
                         <h2>Лицензии</h2>
                         <img src="img/main-page/license1.png" alt="" class="inline-block">
                         <img src="img/main-page/license1.png" alt="" class="inline-block">
                     </div>
-                    <div class="col-md-6 right-content-block">
+                    <div class="col-sm-6 right-content-block">
                         <h2 class="text-center mb-4">Партнёры</h2>
                         <div class="partners">
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="img/main-page/partner1.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner2.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner3.gif" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner1.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner2.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner3.gif" alt="" class="partner-img"></div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="img/main-page/partner4.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner5.png" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner6.gif" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner4.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner5.png" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner6.gif" alt="" class="partner-img"></div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="img/main-page/partner7.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner8.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner9.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner7.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner8.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner9.jpg" alt="" class="partner-img"></div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="img/main-page/partner10.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner11.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner12.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner10.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner11.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner12.jpg" alt="" class="partner-img"></div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="img/main-page/partner13.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner14.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="img/main-page/partner15.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner13.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner14.jpg" alt="" class="partner-img"></div>
+                                <div class="col-sm-4 partner"><img src="img/main-page/partner15.jpg" alt="" class="partner-img"></div>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
             <!--Футер-->
             <div class="footer">
                 <div class="row p-5">
-                    <div class="col-md-4 offset-md-2">
+                    <div class="col-sm-4 offset-sm-2">
                         <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
                             <li class="footer-contacts-li">109507, г. Москва,
@@ -122,7 +122,7 @@
                             <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
                             <li class="footer-menu-li"><a href="#">Главная</a></li>
