--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
         <!--Хэдер-->
         <div class="header">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-sm-6 offset-sm-3">
                     <div class="news">
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
@@ -23,11 +23,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-9 menu-left">
+                <div class="col-sm-9 menu-left">
                     <h1 class="company-name">"Центрэнгерго"</h1>
                     <p class="company-description">ООО Научно-исследовательский центр энерготехнологий</p>
                 </div>
-                <div class="col-md-3 menu-right">
+                <div class="col-sm-3 menu-right">
                     <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
                     <div class="contacts">
                         <p class="website">www.ce91.ru</p>
@@ -91,7 +91,7 @@
             <!--Футер-->
             <div class="footer">
                 <div class="row p-5">
-                    <div class="col-md-4 offset-md-2">
+                    <div class="col-sm-4 offset-sm-2">
                         <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
                             <li class="footer-contacts-li">109507, г. Москва,
@@ -100,7 +100,7 @@
                             <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
                             <li class="footer-menu-li"><a href="index.html">Главная</a></li>
