--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
         <!--Хэдер-->
         <div class="header">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-sm-6 offset-sm-3">
                     <div class="news">
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
@@ -23,11 +23,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-9 menu-left">
+                <div class="col-sm-9 menu-left">
                     <h1 class="company-name">"Центрэнгерго"</h1>
                     <p class="company-description">ООО Научно-исследовательский центр энерготехнологий</p>
                 </div>
-                <div class="col-md-3 menu-right">
+                <div class="col-sm-3 menu-right">
                     <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
                     <div class="contacts">
                     </div>
@@ -56,14 +56,14 @@
         <!--Основной контент страницы-->
             <div class="content">
                 <div class="row">
-                    <div class="col-md-7 offset-md-3">
+                    <div class="col-sm-7 offset-sm-3">
                         <div class="visit-card mt-5 mb-5">
                             <div class="visit-card-logo-container">
                                 <img src="img/logo.png" alt="" class="visit-card-logo">
                             </div>
                             <h2 class="visit-card-main-caption">"Центрэнгерго"</h2>
                             <div class="row">
-                                <div class="col-md-6">
+                                <div class="col-sm-6">
                                     <div class="visit-card-contacts">
                                         <table class="visit-card-table">
                                             <tr class="visit-card-tr">
@@ -82,7 +82,7 @@
                                         </table>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-sm-6">
                                     <div class="visit-card-activities">
                                         <p class="visit-card-activity">Ремонт и обслуживание турбин</p>
                                         <p class="visit-card-activity">Ремонт и обслуживание парогенераторов</p>
@@ -99,7 +99,7 @@
             <!--Футер-->
             <div class="footer">
                 <div class="row p-5">
-                    <div class="col-md-4 offset-md-2">
+                    <div class="col-sm-4 offset-sm-2">
                         <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
                             <li class="footer-contacts-li">109507, г. Москва,
@@ -108,7 +108,7 @@
                             <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
                             <li class="footer-menu-li"><a href="index.html">Главная</a></li>
