--- a/science.html
+++ b/science.html
@@ -14,7 +14,7 @@
         <!--Хэдер-->
         <div class="header">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-sm-6 offset-sm-3">
                     <div class="news">
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
                         <p class="news-post"><span class="news-date">12.02.2021</span> Текст новости, опубликованной 12 февраля</p>
@@ -23,11 +23,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-9 menu-left">
+                <div class="col-sm-9 menu-left">
                     <h1 class="company-name">"Центрэнгерго"</h1>
                     <p class="company-description">ООО Научно-исследовательский центр энерготехнологий</p>
                 </div>
-                <div class="col-md-3 menu-right">
+                <div class="col-sm-3 menu-right">
                     <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
                     <div class="contacts">
                         <p class="website">www.ce91.ru</p>
@@ -59,39 +59,39 @@
         <!--Основной контент страницы-->
             <div class="content mt-5">
                 <div class="row">
-                    <div class="col-md-8 offset-md-2">
+                    <div class="col-sm-8 offset-sm-2">
                         <p class="text">Компания «Центрэнерго» плотно связывает свою инновационную деятельность и дополнительное обучение специалистов с ведущим ВУЗом Санкт-Петербурга, федеральным государственным автономным образовательным учреждением высшего образования «Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики».</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8 offset-md-2">
+                    <div class="col-sm-8 offset-sm-2">
                         <p class="text">В рамках сотрудничества активно применяется практика совместной корпоративной научно-технической консолидации интересов и усилий. В 2012 году в составе мегафакультета компьютерных технологий и управления, факультета систем управления и робототехники (СУиР) была открыта базовая кафедра «Систем и технологий техногенной безопасности».На кафедре проходили подготовку магистры по направлению 200100.68 «Приборостроение», по программе «Методы и технологии аналитического приборостроения для реализации и обеспечения безопасности техногенных объектов».</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8 offset-md-2">
+                    <div class="col-sm-8 offset-sm-2">
                         <p class="text">В 2015 году в Италии (г. Ареццо) на базе производственной площадки АО "Центрэнгерго" было открыто представительство Университета ИТМО за рубежом, что позволило организовать международное сотрудничество и  внедрять совместные новейшие разработки в производство. </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8 offset-md-2">
+                    <div class="col-sm-8 offset-sm-2">
                         <p class="text">В начале 2018 учебного года на базе мегафакультета КТиУ совместно было создано новое подразделение – «Институт интеллектуальных промышленных технологий» (ИПТ) (директор профессор М.Е. Федосовский), основными задачами которого стали исследования и разработки нового конкурентоспособного серийного продукта с применением систем и технологий цифрового производства. В структуру института входят четыре лаборатории, которые выполняют прикладные исследования и проекты в области математико-экономического моделирования и анализа производственных процессов, кибер-физических систем, промышленной робототехники и высокопроизводительных производственных технологий, информационных систем управления с элементами искусственного интеллекта.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8 offset-md-2">
+                    <div class="col-sm-8 offset-sm-2">
                         <p class="text">Уже сегодня в институте ИПТ реализуется НИОКТР «Создание роботизированного дефектоскопа с фазированной электромагнитной акустической антенной решеткой и бесконтактным вводом УЗ-волны» (н. рук. д.т.н., профессор факультета СУиР А.А. Пыркин). Немалую роль институт отводит обеспечению организации образовательного процесса сетевой магистратуры специализации «Высокотехнологичные системы техногенной безопасности» в рамках образовательной программы «Цифровые технологии в приборостроении» (направление подготовки 12.04.01 Приборостроение). Все занятия специализированных курсов проходят на территории компании «Центрэнерго». В ходе образовательного процесса обучающиеся пользуются лабораторными и производственными ресурсами предприятия.</p>
                     </div>
                 </div>
 
                 <div class="row mt-5">
-                    <div class="col-md-6 offset-md-2">
+                    <div class="col-sm-6 offset-sm-2">
                         <h2>СОВМЕСТНЫЕ НАУЧНО-ИССЛЕДОВАТЕЛЬСКИЕ ПРОЕКТЫ</h2>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-8 offset-md-2">
+                    <div class="col-sm-8 offset-sm-2">
                         <ul>
                             <li>В рамках Постановления правительства РФ №218  реализован проект по созданию высокотехнологичного производства прецизионных быстродействующих силовых электромеханических приводов нового поколения на базе ролико-винтовой передачи для общепромышленного и специального применения.</li>
                             <li>В рамках мероприятия №1.4 Федеральной целевой программы «Исследования и разработки по приоритетным направлениям развития научно-технического комплекса России на 2014-2020 годы» был реализован проект по созданию нового бесконтактного магнитного метода неразрушающего контроля трубопроводов с переменным намагничиванием металла и экспериментальная разработка на базе данного метода опытного образца контрольно-измерительного внутритрубного робототехнического комплекса, обеспечивающего решение проблемы своевременной диагностики коррозионных повреждений подземных трубопроводов тепловых сетей малых диаметров без их вскрытия в сфере энергетики и ЖКХ. </li>
@@ -106,7 +106,7 @@
             <!--Футер-->
             <div class="footer">
                 <div class="row p-5">
-                    <div class="col-md-4 offset-md-2">
+                    <div class="col-sm-4 offset-sm-2">
                         <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
                             <li class="footer-contacts-li">109507, г. Москва,
@@ -115,7 +115,7 @@
                             <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
                             <li class="footer-menu-li"><a href="index.html">Главная</a></li>
