Fixed image width

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row mt-3 mb-3">
                     <div class="col-sm-6 left-content-block">
                         <div class="employee-img-container">
-                            <img src="img/main-page/employees.jpg" alt="" class="employee-img">
+                            <img src="img/main-page/employees.jpg" alt="" class="employee-img img-responsive">
                         </div>
                     </div>
                     <div class="col-sm-6 right-content-block">
